Updated the landing page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="py-2 border-bottom">
     <div class="container d-flex flex-wrap justify-content-end">
       <div class="dropdown">
-        <button class="btn btn-outline-dark dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-outline-dark dropdown-toggle recoleta-font" type="button" data-bs-toggle="dropdown" aria-expanded="false">
           Career
         </button>
         <ul class="dropdown-menu">
@@ -22,31 +22,94 @@
         </ul>
       </div>
       <ul class="nav">
-        <li class="nav-item"><button class="btn btn-outline-dark mx-2 fw-bold" style="--bs-btn-padding-y: .3rem; --bs-btn-padding-x: 1.5rem; --bs-btn-font-size: 12px; border-radius: 30px; border: 2px solid black;">Sign in</button></li>
-        <li class="nav-item"><button class="btn btn-pink fw-bold mx-2" style="--bs-btn-padding-y: .4rem; --bs-btn-padding-x: 1.5rem; --bs-btn-font-size: 12px; border-radius: 30px;">Sign up</button></li>
+        <li class="nav-item"><button class="btn btn-outline-dark mx-2 dunkin-font" style="--bs-btn-padding-y: .3rem; --bs-btn-padding-x: 1.5rem; --bs-btn-font-size: 12px; border-radius: 30px; border: 2px solid black;">Sign in</button></li>
+        <li class="nav-item"><button class="btn btn-pink mx-2 dunkin-font" style="--bs-btn-padding-y: .4rem; --bs-btn-padding-x: 1.5rem; --bs-btn-font-size: 12px; border-radius: 30px;">Sign up</button></li>
       </ul>
     </div>
   </nav>
   <div class="border-bottom">
     <header class="d-flex justify-content-center py-3">
-      <ul class="nav nav-pills d-flex align-items-center justify-content-around w-100">
-        <li class="nav-item"><a href="#" class="nav-link text-uppercase fw-bold text-brown">Menu</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-uppercase fw-bold text-brown">Locations</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-uppercase fw-bold text-brown">Delivery</a></li>
+      <ul class="nav nav-pills d-flex align-items-center justify-content-around w-100 dunkin-font">
+        <li class="nav-item"><a href="#" class="nav-link text-uppercase text-brown">Menu</a></li>
+        <li class="nav-item"><a href="#" class="nav-link text-uppercase text-brown">Locations</a></li>
+        <li class="nav-item"><a href="#" class="nav-link text-uppercase text-brown">Delivery</a></li>
         <li class="nav-item"><a href="#" class="nav-link"><img src="./images/dd_nav_logo.svg" alt=""></a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-uppercase fw-bold text-brown">Rewards</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-uppercase fw-bold text-brown">Cards</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-uppercase fw-bold text-brown">Shop</a></li>
+        <li class="nav-item"><a href="#" class="nav-link text-uppercase text-brown text-center lh-1">Dunkin'<br> Rewards</a></li>
+        <li class="nav-item"><a href="#" class="nav-link text-uppercase text-brown text-center lh-1">Dunkin'<br> Card</a></li>
+        <li class="nav-item"><a href="#" class="nav-link text-uppercase text-brown">Shop</a></li>
       </ul>
     </header>
   </div>
   <!-- End of Header -->
 
   <!-- Hero Section -->
-  <div class="px-4 py-5 text-center hero-section">
-    <h1 class="display-5 fw-bold text-uppercase text-dunkin">Dunkin<span style="color: #C63663;">' Rewards</span></h1>
-    <h1 class="display-5 fw-bold text-uppercase">A new way to run</h1>
+  <div class="px-4 py-5 mb-5 text-center hero-section dunkin-font">
+    <h1 class="display-5 text-uppercase text-dunkin">Dunkin<span style="color: #C63663;">' Rewards</span></h1>
+    <h1 class="display-4 text-uppercase mb-4" style="color: #3E342F;">A new way to run</h1>
   </div>
+  <div class="container mx-auto row pt-5 d-flex align-items-center justify-content-around mb-5" style=" height: 330px;">
+    <div class="col-lg-3 text-center" style="height: 100%;">
+      <img src="./images/Rewards.png" alt="">
+      <p class="fs-5 lh-1 dunkin-font" style="color: #3E342F;">EARN POINTS ANY WAY YOU PAY</p>
+      <p class="recoleta-font">Order ahead in the app or scan your Dunkin’ Rewards ID in-store to earn 10 points per $1 spent</p>
+    </div>
+    <div class="col-lg-3 text-center" style="height: 100%;">
+      <img src="./images/Turn_points_rewards.png" alt="">
+      <h2 class="fs-5 lh-1 dunkin-font">TURN POINTS INTO REWARDS</h2>
+      <p class="recoleta-font">Rewards start at just 150 points – only $15 spent!</p>
+    </div>
+    <div class="col-lg-3 text-center" style="height: 100%;">
+      <img src="./images/Boosted.png" alt="">
+      <h2 class="fs-5 lh-1 dunkin-font">UNLOCK BOOSTED STATUS</h2>
+      <p class="recoleta-font">12 visits in a calendar month earns 12 points per dollar!</p>
+    </div>
+  </div>
+  <div class="d-flex align-items-center justify-content-center gap-3 mb-5">
+    <button class="btn btn-pink py-2 rounded-pill recoleta-font w-bold" style="width: 15%;" type="button">Sign up</button>
+    <button class="btn btn-outline-brown py-2 rounded-pill recoleta-font fw-bold" style="width: 15%;" type="button">Learn More</button>
+  </div>
+  <!-- End of Hero Section -->
+
+  <!-- Download App Section -->
+  <div class="col-xxl-8 px-4 border-top border-bottom">
+    <div class="row flex-lg-row-reverse align-items-center">
+      <div class="col-10 col-sm-8 col-lg-6 offset-lg-1 p-0 overflow-hidden">
+        <img src="./images/iphone_web.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-5 text-center">
+        <h1 class="display-4 fw-bold lh-1 mb-4 dunkin-font text-dunkin">DUNKIN<span style="color: #C63663;">’</span><br><span style="color: #3E342F;"> DONE EASY</span></h1>
+        <p class="fs-4">Find a store, place your order and get on your way with the Dunkin’ App</p>
+        <ul class="text-start text-brown">
+          <li>Order ahead and pay from your phone.</li>
+          <li>Join Dunkin’ Rewards and earn points towards free food and beverages</li>
+          <li>Earn exclusive offers and rewards</li>
+        </ul>
+        <div class="d-grid gap-2 d-md-flex justify-content-center">
+          <button type="button" class="btn"><img src="./images/AppStore.png"alt=""></button>
+          <button type="button" class="btn"><img src="./images/GooglePlayStore.png" alt=""></button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End of Download App Section -->
+
+  <!-- Pumpkin spice AD section -->
+  <div class="col-xxl-8 px-4 py-5" style="background-color: #FBF1DD;">
+    <div class="row flex-lg-row align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-7">
+        <img src="./images/Pumpkin_home_desktop.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-5">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">UPPIN' THE PUMPKIN</h1>
+        <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End of AD Section -->
   
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
