Added the three new sections

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!-- End of Hero Section -->
 
   <!-- Download App Section -->
-  <div class="col-xxl-8 px-4 border-top border-bottom">
+  <div class="col-xxl-8 px-4 border-top">
     <div class="row flex-lg-row-reverse align-items-center">
       <div class="col-10 col-sm-8 col-lg-6 offset-lg-1 p-0 overflow-hidden">
         <img src="./images/iphone_web.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
@@ -94,23 +94,140 @@
   <!-- End of Download App Section -->
 
   <!-- Pumpkin spice AD section -->
-  <div class="col-xxl-8 px-4 py-5" style="background-color: #FBF1DD;">
-    <div class="row flex-lg-row align-items-center g-5 py-5">
+  <div class="col-xxl-8 px-4 mt-4 border-top" style="background-color: #FBF1DD;">
+    <div class="row flex-lg-row align-items-center g-5">
       <div class="col-10 col-sm-8 col-lg-7">
         <img src="./images/Pumpkin_home_desktop.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
       </div>
-      <div class="col-lg-5">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">UPPIN' THE PUMPKIN</h1>
-        <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+      <div class="col-lg-5 text-center">
+        <h1 class="display-5 fw-bold lh-1 mb-2 dunkin-font" style="color: #932922;">UPPIN' THE <br><span class="text-dunkin display-3 fw-bold">PUMPKIN</span></h1>
+        <p class="fs-3 fw-bold recoleta-font" style="color: #3E342F;">Here Comes Pumpkin!</p>
+        <p class="fs-5 lh-1">Try a Pumpkin Spice Signature Latte and pair it with one of your favorite Pumpkin Bakery Items today</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-center mt-4">
+          <button type="button" class="btn btn-pink recoleta-font btn-lg px-4" style="border-radius: 30px;">Find a Store</button>
         </div>
       </div>
     </div>
   </div>
   <!-- End of AD Section -->
+
+  <!-- Second AD section -->
+  <div class="d-flex flex-row border-top">
+    <div class="col-6 border-end text-center pt-4">
+      <p class="text-brown fw-bold recoleta-font">Sipping is Believing</p>
+      <h4 class="text-uppercase fw-bold recoleta-font" style="color: #C63663;">Hand crafted espresso drinks</h4>
+      <img src="./images/Expresso_Homepage.jpg" alt="">
+    </div>
+    <div class="col-3 border-end text-center pt-4">
+      <p class="text-brown fw-bold recoleta-font">Freshly Made</p>
+      <h4 class="text-uppercase fw-bold recoleta-font" style="color: #C63663;">All day breakfast sandwiches</h4>
+      <img src="./images/Bacon_Egg_Cheese_Croissant_Homepage.png" alt="">
+    </div>
+    <div class="col-3 text-center pt-4">
+      <p class="text-brown fw-bold recoleta-font">Dunkin' Classic</p>
+      <h4 class="text-uppercase fw-bold recoleta-font" style="color: #C63663;">hot coffee</h4>
+      <img src="./images/Hot_coffee_Homepage.jpg" alt="">
+    </div>
+  </div>
+  <!-- End of Second AD Section -->
+
+  <!-- Back to School Section -->
+  <div class="px-4 py-5 text-center border-top image-background-2">
+    <h1 class="display-3 fw-bold pt-5 text-wrap recoleta-font" style="color: #3E342F;">FUEL FOR BACK-<br>TO-SCHOOL</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="fs-4 mb-4">Send an eGift card and treat your favorite teacher or student to a Dunkin' Run on you!</p>
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <button type="button" class="btn btn-pink recoleta-font btn-lg px-4" style="border-radius: 30px;">SEND AN eGIFT CARD</button>
+      </div>
+    </div>
+  </div>
+  <!-- End of Back to School Section -->
+
+  <!-- Map Section -->
+  <div class="col-xxl-8 border-top border-bottom">
+    <div class="d-flex flex-lg-row">
+      <div class="col-10 col-sm-8 col-lg-7">
+        <img src="./images/Google_map_web.png" class="d-block img-fluid" style="height: 100%; width: 100%;" alt="Bootstrap Themes" loading="lazy">
+      </div>
+      <div class="col-lg-5 text-center pt-4">
+        <h1 class="display-2 fw-bold lh-1 mb-3 recoleta-font" style="color: #3E342F;">Come Visit</h1>
+        <p class="fs-3 fw-bold recoleta-font" style="color: #3E342F;">Find a Dunkin' Near You</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <button type="button" class="btn btn-pink recoleta-font btn-lg px-4 mx-auto" style="border-radius: 30px;">View Locations</button>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End of Map Section -->
   
+  <!-- Footer Section -->
+  <div class="container">
+    <footer class="pt-5">
+      <p class="text-brown fw-bold">Quick Links</p>
+      <div class="row">
+        <div class="col-6 col-md-2">
+          <ul class="nav flex-column text-decoration-underline">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Press Room</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About Us</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-6 col-md-2">
+          <ul class="nav flex-column text-decoration-underline">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Mobile App</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Franchising</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-6 col-md-2">
+          <ul class="nav flex-column text-decoration-underline">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Corporate</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Contact Us</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-md-5 offset-md-1 mb-3">
+          <p class="fw-bold text-brown">Follow us</p>
+          <ul class="nav list-unstyled d-flex flex-row align-items-center">
+            <li class=""><a class="text-body-secondary" href="#"><img src="./images/Socials/twitter-6.svg" class="img-fluid d-block" width="30" height="30" alt=""></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><img src="./images/Socials/facebook-3-2.svg" class="img-fluid d-block" width="20" height="20" alt=""></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><img src="./images/Socials/pinterest-3.svg" class="img-fluid d-block" width="23" height="23" alt=""></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><img src="./images/Socials/instagram-2016-5.svg" class="img-fluid d-block" width="23" height="23" alt=""></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><img src="./images/Socials/youtube-3.svg" class="img-fluid d-block" width="30" height="30" alt=""></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><img src="./images/Socials/tiktok-icon-2.svg" class="img-fluid d-block" width="23" height="23" alt=""></a></li>
+          </ul>
+        </div>
+      </div>
+  
+      <div class="d-flex row align-items-center text-center flex-sm-row  ">
+        <h5 class="partner-line"><span>Our Partners</span></h5>
+        <div class="d-flex align-items-center justify-content-around py-3">
+          <img src="./images/Partners/JetBlue_new.png" alt="">
+          <img src="./images/Partners/boston-bruins.png" alt="">
+          <img src="./images/Partners/boston-celtics.png" alt="">
+          <img src="./images/Partners/BR_Logo_New.png" alt="">
+          <img src="./images/Partners/new-england-patriots.png" alt="">
+          <img src="./images/Partners/NERevsLogo2.png" alt="">
+          <img src="./images/Partners/RedSox.jpg" alt="">
+        </div>
+      </div>
+    </footer>
+  </div>
+  <div class="my-4 container border-top">
+    <footer class="mb-4">
+      <ul class="nav justify-content-around border-bottom pb-3 mb-3 text-decoration-underline">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">Terms of use</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">Privacy Policy</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">Do not sell my personal info</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">Your AD choices</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">CA Transparency</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">Web Accessibility</a></li>
+      </ul>
+      <p class="text-center">&copy; 2023 DD IP Holder, LLC</p>
+    </footer>
+  </div>
+  <!-- End of Footer Section -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
